# veriphi

./: .gitignore  Makefile  eirctl.yaml  package-lock.json
node/veriphi-core-node/: index.d.ts
node/veriphi-core-node/src/: lib.rs
node/veriphi_core/src/: index.ts
notebooks/: py_start.ipynb
python/veriphi_core/: __init__.py  interface.py
rust/: Cargo.toml
rust/veriphi-core-py/src/: lib.rs
rust/veriphi-core-wasi/: Cargo.toml  README.md  rust-toolchain.toml
rust/veriphi-core-wasi/src/: lib.rs
rust/veriphi-core-wasm/: README.md
rust/veriphi-core-wasm/src/: lib.rs
rust/veriphi-core/src/: utils.rs
rust/veriphi-sdk/src/: lib.rs
wasm/veriphi_core/src/: index.ts
